--- a/bootstrap/login.html
+++ b/bootstrap/login.html
@@ -6,7 +6,7 @@
 <!--    <link href="css/style.css" rel="stylesheet">-->
   </head>
   <body>
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" />
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
@@ -191,7 +191,7 @@ a:hover,a:focus{
  <!-- Tab panes -->
  <div class="tab-content tabs">
  <div role="tabpanel" class="tab-pane fade in active" id="Section1">
- <form class="form-horizontal">
+ <form class="form-horizontal" accept-charset="UTF-8">
  <div class="form-group">
  <label for="Email">username</label>
  <input type="email" class="form-control" id="Email">
